--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>ICYBOB</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/js/cufon-yui.js"></script>
-<script type="text/javascript" src="/js/arial.js"></script>
-<script type="text/javascript" src="/js/cuf_run.js"></script>
+<script type="text/javascript" src="cufon-yui.js"></script>
+<script type="text/javascript" src="arial.js"></script>
+<script type="text/javascript" src="cuf_run.js"></script>
 </head>
 <body>
 <div class="main">
