--- a/people.html
+++ b/people.html
@@ -32,16 +32,16 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Staff</h2>
-          <li><a href="dobbs.html">Clare Dobbs</a></li>
-          <li> <a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li>
-          <h2><span>Postdocs</h2>
-          <p> Ahmad Ali </p>
-          <h2><span>Researchers associated with ICYBOB</h2>
-          <p> Svitlana Zhukovska (Ernest Rutherford fellow) </p>
-          <li> <a href="https://stevenrieder.com">Steven Rieder</a> (post-doc) </li>
-          <p> Tom Bending (PhD student) </p>
-          <p> Kong Liow (PhD student) </p>
+          <h2>Staff</h2>
+            <li><a href="dobbs.html">Clare Dobbs</a></li>
+            <li><a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li>
+          <h2>Postdocs</h2>
+            <li><a href="ali.html">Ahmad Ali</a></li>
+          <h2>Researchers associated with ICYBOB</h2>
+            <li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
+            <li> <a href="https://stevenrieder.com">Steven Rieder</a> (post-doc) </li>
+            <li> Tom Bending (PhD student) </li>
+            <li> Kong Liow (PhD student) </li>
         </div>
       </div>
       <div class="sidebar">
