--- a/ali.html
+++ b/ali.html
@@ -24,7 +24,7 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html">ICYBOB</a><br />
+        <h1><a href="index.html">ICYBOB</a></h1><br />
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@ As such, I also work on improving the parallelism of TORUS, in particular with M
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/research/astrophysics/research-interests/galaxies/">Galaxies and the Interstellar Medium</a></li>
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/research/astrophysics/">Exeter Astrophysics</a></li>
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/">Exeter Physics</a></li>
-          </p>
+          </ul>
         </div>
       </div>
       <div class="clr"></div>
