--- a/dobbs.html
+++ b/dobbs.html
@@ -24,7 +24,7 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html">ICYBOB</a><br />
+        <h1><a href="index.html">ICYBOB</a></h1><br />
       </div>
     </div>
   </div>
@@ -33,7 +33,7 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Clare Dobbs</h2>
-<p> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. 
+<p> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </p>
         </div>
       </div>
       <div class="sidebar">
@@ -43,7 +43,7 @@
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/research/astrophysics/research-interests/galaxies/">Galaxies and the Interstellar Medium</a></li>
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/research/astrophysics/">Exeter Astrophysics</a></li>
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/">Exeter Physics</a></li>
-          </p>
+          </ul>
         </div>
       </div>
       <div class="clr"></div>
