--- a/dobbs.html
+++ b/dobbs.html
@@ -32,7 +32,7 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Clare Dobbs</h2>
+          <h2>Clare Dobbs</h2>
 <p> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </p>
         </div>
       </div>
