--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html"><b>ICYBOB</b></a><br />
+        <h1><a href="index.html"><b>ICYBOB</b></a></h1><br />
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/research/astrophysics/research-interests/galaxies/">Galaxies and the Interstellar Medium</a></li>
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/research/astrophysics/">Exeter Astrophysics</a></li>
             <li><a href="http://emps.exeter.ac.uk/physics-astronomy/">Exeter Physics</a></li>
-          </p>
+          </ul>
         </div>
       </div>
       <div class="clr"></div>
