--- a/people.html
+++ b/people.html
@@ -44,7 +44,7 @@
           <h2>Researchers associated with ICYBOB</h2>
             <ul>
               <li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
-              <li> <a href="https://stevenrieder.com">Steven Rieder</a> (post-doc) </li>
+              <li> <a href="https://stevenrieder.com">Steven Rieder</a> (postdoc) </li>
               <li> Tom Bending (PhD student) </li>
               <li> Kong Liow (PhD student) </li>
             </ul>
