--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
               <li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
               <li> <a href="https://stevenrieder.com">Steven Rieder</a> (postdoc) </li>
               <li> Tom Bending (PhD student) </li>
-              <li> Kong Liow (PhD student) </li>
+              <li> Kong You Liow (PhD student) </li>
             </ul>
         </div>
       </div>
