--- a/people.html
+++ b/people.html
@@ -40,6 +40,7 @@
           <h2>Postdocs</h2>
             <ul>
               <li><a href="ali.html">Ahmad Ali</a></li>
+              <li> Anne Buckner </li>
             </ul>
           <h2>Researchers associated with ICYBOB</h2>
             <ul>
