--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,13 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Publications</h2>
+            <ul>
+              <li> Dobbs C. L., Liow K. Y., Rieder S., 2020, MNRAS, 496, L1
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.496L...1D/abstract">‘The formation of young massive clusters by colliding flows’</a> </li>
+                </ul>
+              </li>
+            </ul>
         </div>
       </div>
       <div class="sidebar">
