--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,11 @@
         <div class="article">
           <h2><span>Publications</h2>
             <ul>
+              <li> Bending T. J. R., Dobbs C. L., Bate M. R., 2020, MNRAS, 495, 1672
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.495.1672B/abstract">‘Photoionizing feedback in spiral arm molecular clouds’</a> </li>
+                </ul>
+              </li>
               <li> Dobbs C. L., Liow K. Y., Rieder S., 2020, MNRAS, 496, L1
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.496L...1D/abstract">‘The formation of young massive clusters by colliding flows’</a> </li>
