--- a/ali.html
+++ b/ali.html
@@ -34,19 +34,19 @@
         <div class="article">
           <h2><span>Ahmad Ali</h2>
 <p> I study star formation and stellar feedback, particularly for massive stars (spectral type O, > 20 solar masses). 
-My research focuses on radiative processes such as photoionization and radiation pressure and 
+My research focuses on mechanical feedback from stellar winds, and radiative feedback such as photoionization and radiation pressure. In particular, 
 (1) how these feedback mechanisms disperse gas from clusters in giant molecular clouds; 
 (2) how star formation rates and efficiencies are modified via heating, dispersal, or collect-and-collapse of gas reservoirs; 
-(3) how the radiative processes interplay with other mechanisms such as stellar winds and supernovae; 
+(3) what is the relative importance of each process;
 (4) how the intense radiation fields inside H II regions affect structures such as protoplanetary discs and gas globules via photoevaporation. </p>
 
-<p>I carry out numerical simulations to investigate these processes using TORUS, the code developed in Exeter by Prof. Tim Harries and collaborators including myself. 
-TORUS uses a Monte Carlo radiative transfer scheme coupled with hydrodynamics on a 3D grid. 
-This calculates in detail the photoionization, thermal, and radiative equilibria for multiple atomic species and dust grains. 
-TORUS also calculates synthetic observations of line and continuum emission from gas and dust directly from the radiation-hydrodynamics models. </p>
+<p>I use numerical simulations to investigate these processes, mostly with TORUS (Monte Carlo radiative transfer and grid-based hydrodynamics).
+TORUS calculates photoionization, thermal, and radiative equilibria using multiple atomic species and dust grains (including scattering/absorption). 
+It also calculates synthetic observations of line and continuum emission from gas and dust directly from the radiation-hydrodynamics models (i.e. without post-processing). 
+I also use sphNG (smoothed particle hydrodynamics) for stellar winds and larger scale initial conditions.</p>
 
-<p>Such models are computationally demanding, requiring the efficient use of High Performance Computing machines (e.g. Isca in Exeter, and national DiRAC facilities). 
-As such, I also work on improving the parallelism of TORUS, in particular with MPI. </p>
+<p><a href="https://ui.adsabs.harvard.edu/public-libraries/hjrienvYQauME1IBxDtjrA">View my publications on ADS</a></p>
+            
         </div>
       </div>
       <div class="sidebar">
