--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,11 @@
         <div class="article">
           <h2><span>Publications</h2>
             <ul>
+              <li> Liow K. Y., Dobbs C. L., 2020, accepted for publication in MNRAS
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200907857L/abstract">‘The role of collision speed, cloud density, and turbulence in the formation of young massive clusters via cloud-cloud collisions’</a> </li>
+                </ul>
+              </li>
               <li> Bending T. J. R., Dobbs C. L., Bate M. R., 2020, MNRAS, 495, 1672
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.495.1672B/abstract">‘Photoionizing feedback in spiral arm molecular clouds’</a> </li>
