--- a/research.html
+++ b/research.html
@@ -33,6 +33,11 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Research</h2>
+            <p>The main research at ICYBOB is listed below:</p>
+            <dl>
+              <dt>Cloud-cloud collision</dt>
+              <dd>Some text </dd>
+            </dl>
         </div>
       </div>
       <div class="sidebar">
