Added description list template

--- a/research.html
+++ b/research.html
@@ -42,6 +42,14 @@
               there is enough gas for star formation when the clouds collide. At ICYBOB, we perform smoothed particle hydrodynamics (SPH)
               cloud-cloud collision simulations to investigate the optimum initial conditions to form massive clusters.</dd>
               <dd> <img src="/images/splash_0344.png" width="400" style="float:center " alt="Colliding clouds at 1 Myr"/></dd>
+              <dd> </dd>
+
+              <dt>Stellar feedback</dt>
+              <dd> Some text </dd>
+              <dd> Image tag here </dd>
+              <dd> </dd>
+
+              
             </dl>
         </div>
       </div>
