fix images directory

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><b>I</b>nitial <b>C</b>onditions for <b>Y</b>MCs and <b>B</b>irth of 
+          <h2><b>I</b>nitial <b>C</b>onditions for <b>Y</b>MCs and <b>B</b>irth of
 <b>OB</b> associations</h2>
 <p>
           <p>ICYBOB is an ERC funded project investigating the formation and evolution of stellar clusters. The project aims to determine how the initial conditions of star formation, including the formation of molecular clouds, determine the properties of stellar clusters. Below is an example optical post-processed image simulation of a cluster formed by colliding flows, with dust extinction. </p>
-          <img src="lowvel_ext_copy.png" width="445" height="405" style="float:center " alt="" />
+          <img src="/images/lowvel_ext_copy.png" width="445" height="405" style="float:center " alt="" />
 </p>
         </div>
       </div>
