--- a/people.html
+++ b/people.html
@@ -34,20 +34,20 @@
         <div class="article">
           <h2>Staff</h2>
             <ul>
-              <li><a href="dobbs.html">Clare Dobbs</a></li>
+              <li><a href="/profiles/dobbs.html">Clare Dobbs</a></li>
               <li><a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li>
-            </ul>  
+            </ul>
           <h2>Postdocs</h2>
             <ul>
-              <li><a href="ali.html">Ahmad Ali</a></li>
+              <li><a href="/profiles/ali.html">Ahmad Ali</a></li>
               <li> Anne Buckner </li>
             </ul>
           <h2>Researchers associated with ICYBOB</h2>
             <ul>
               <li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
-              <li> <a href="https://stevenrieder.com">Steven Rieder</a> (postdoc) </li>
+              <li> <a href="https://stevenrieder.com">Steven Rieder</a> (Postdoc) </li>
               <li> Tom Bending (PhD student) </li>
-              <li> <a href="https://kyleastro.github.io/">Kong You Liow</a> (PhD student) </li>
+              <li> <a href="/profiles/liow.html">Kong You Liow</a> (PhD student) </li>
             </ul>
         </div>
       </div>
