--- a/profiles/ali.html
+++ b/profiles/ali.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ICYBOB | Support</title>
+<title>ICYBOB | People | Ahmad Ali</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="../style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/cufon-yui.js"></script>
 <script type="text/javascript" src="js/arial.js"></script>
 <script type="text/javascript" src="js/cuf_run.js"></script>
@@ -33,20 +33,20 @@
       <div class="mainbar">
         <div class="article">
           <h2><span>Ahmad Ali</h2>
-<p> I study star formation and stellar feedback, particularly for massive stars (spectral type O, > 20 solar masses). 
-My research focuses on mechanical feedback from stellar winds, and radiative feedback such as photoionization and radiation pressure. In particular, 
-(1) how these feedback mechanisms disperse gas from clusters in giant molecular clouds; 
-(2) how star formation rates and efficiencies are modified via heating, dispersal, or collect-and-collapse of gas reservoirs; 
+<p> I study star formation and stellar feedback, particularly for massive stars (spectral type O, > 20 solar masses).
+My research focuses on mechanical feedback from stellar winds, and radiative feedback such as photoionization and radiation pressure. In particular,
+(1) how these feedback mechanisms disperse gas from clusters in giant molecular clouds;
+(2) how star formation rates and efficiencies are modified via heating, dispersal, or collect-and-collapse of gas reservoirs;
 (3) what is the relative importance of each process;
 (4) how the intense radiation fields inside H II regions affect structures such as protoplanetary discs and gas globules via photoevaporation. </p>
 
 <p>I use numerical simulations to investigate these processes, mostly with TORUS (Monte Carlo radiative transfer and grid-based hydrodynamics).
-TORUS calculates photoionization, thermal, and radiative equilibria using multiple atomic species and dust grains (including scattering/absorption). 
-It also calculates synthetic observations of line and continuum emission from gas and dust directly from the radiation-hydrodynamics models (i.e. without post-processing). 
+TORUS calculates photoionization, thermal, and radiative equilibria using multiple atomic species and dust grains (including scattering/absorption).
+It also calculates synthetic observations of line and continuum emission from gas and dust directly from the radiation-hydrodynamics models (i.e. without post-processing).
 I also use sphNG (smoothed particle hydrodynamics) for stellar winds and larger scale initial conditions.</p>
 
 <p><a href="https://ui.adsabs.harvard.edu/public-libraries/hjrienvYQauME1IBxDtjrA">View my publications on ADS</a></p>
-            
+
         </div>
       </div>
       <div class="sidebar">
