fixed path from profiles

--- a/profiles/dobbs.html
+++ b/profiles/dobbs.html
@@ -14,17 +14,17 @@
     <div class="header_resize">
       <div class="menu_nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="people.html">People</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="movies.html">Movies</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../people.html">People</a></li>
+          <li><a href="../research.html">Research</a></li>
+          <li><a href="../publications.html">Publications</a></li>
+          <li><a href="../movies.html">Movies</a></li>
         </ul>
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html">ICYBOB</a></h1><br />
+        <h1><a href="../index.html">ICYBOB</a></h1><br />
       </div>
     </div>
   </div>
@@ -53,11 +53,11 @@
     <div class="footer_resize">
       <p class="lf">&copy; Copyright MyWebSite. Designed by Blue <a href="http://www.bluewebtemplates.com/">Website Templates</a></p>
       <ul class="fmenu">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="people.html">People</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="movies.html">Movies</a></li>
+        <li class="active"><a href="../index.html">Home</a></li>
+        <li><a href="../people.html">People</a></li>
+        <li><a href="../research.html">Research</a></li>
+        <li><a href="../publications.html">Publications</a></li>
+        <li><a href="../movies.html">Movies</a></li>
       </ul>
       <div class="clr"></div>
     </div>
