--- a/people.html
+++ b/people.html
@@ -42,6 +42,10 @@
               <li><a href="/profiles/ali.html">Ahmad Ali</a></li>
               <li> Anne Buckner </li>
             </ul>
+          <h2>PhD Student</h2>
+            <ul>
+              <li> Nicholas Herrington </li>
+            </ul>
           <h2>Researchers associated with ICYBOB</h2>
             <ul>
               <li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
