revert logo for now

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html"><img src="/images/ICYBOB_logov1_blue.png" height="178" alt="ICYBOB" title="ICYBOB" /></a></h1><br />
+        <h1><a href="index.html"><b>ICYBOB</b></a></h1><br />
       </div>
     </div>
   </div>
