--- a/people.html
+++ b/people.html
@@ -24,7 +24,8 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html">ICYBOB</a><br /></h1>
+       <center> <h1><a href="index.html"><b><img src="/images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="100">
+</b></a></h1></center><br />
       </div>
     </div>
   </div>
@@ -40,7 +41,7 @@
           <h2>Postdocs</h2>
             <ul>
               <li><a href="/profiles/ali.html">Ahmad Ali</a></li>
-              <li> Anne Buckner </li>
+              <li><a href="/profiles/Buckner.html">Anne Buckner</a></li>
             </ul>
           <h2>PhD Student</h2>
             <ul>
