--- a/research.html
+++ b/research.html
@@ -24,7 +24,8 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="index.html">ICYBOB</a><br />
+        <center> <h1><a href="index.html"><b><img src="/images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="100">
+</b></a></h1></center><br />
       </div>
     </div>
   </div>
@@ -47,6 +48,11 @@
               <dt>Stellar feedback</dt>
               <dd> Some text </dd>
               <dd> Image tag here </dd>
+              <dd> </dd>
+              
+              
+              <dt>Properties of Star Clusters</dt>
+              <dd> Star clusters are the building blocks of our Galaxy, as most stars are formed in clusters. Therefore to better understand the star formation process requires following the evolution of (i) stars in clusters and (ii) clusters collectively on a Galactic scale. At ICYBOB, we study the spatial and kinematic behaviour of clusters as they evolve, identifying changes and comparing differences in their properties at various stages. In addition, we look at how observing conditions impact the conclusions we draw about cluster evolution.  </dd>
               <dd> </dd>
 
             </dl>
