--- a/profiles/dobbs.html
+++ b/profiles/dobbs.html
@@ -24,7 +24,8 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <h1><a href="../index.html">ICYBOB</a></h1><br />
+        <center> <h1><a href="index.html"><b><img src="/images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="100">
+</b></a></h1></center><br />
       </div>
     </div>
   </div>
