--- a/people.html
+++ b/people.html
@@ -41,7 +41,7 @@
           <h2>Postdocs</h2>
             <ul>
               <li><a href="/profiles/ali.html">Ahmad Ali</a></li>
-              <li><a href="/profiles/Buckner.html">Anne Buckner</a></li>
+              <li><a href="/profiles/buckner.html">Anne Buckner</a></li>
             </ul>
           <h2>PhD Student</h2>
             <ul>
