--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-       <center> <a href="index.html"><b><img src="/images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="200">
-</b></a></center><br />
+        <a href="index.html"><b><img src="/images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="200 class="centered">
+</b></a><br />
       </div>
     </div>
   </div>
