--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <style>
+h1 {
+  position: absolute;
+  top: 10px;
+}
+</style>
 <title>ICYBOB</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -24,7 +30,7 @@
       </div>
       <div class="clr"></div>
       <div class="logo">
-        <a href="index.html"><b><img src="/images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="200 class="centered">
+        <center> <h1><a href="../index.html"><b><img src="../images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="200" height="100">
 </b></a><br />
       </div>
     </div>
