--- a/research.html
+++ b/research.html
@@ -6,6 +6,7 @@ h1 {
   position: absolute;
   top: 10px;
 }
+</style>
 <title>ICYBOB | Research</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
