--- a/profiles/buckner.html
+++ b/profiles/buckner.html
@@ -6,6 +6,13 @@ h1 {
   position: absolute;
   top: 10px;
 }
+img2 {
+  float: right; padding-left: 500px;
+}
+div {
+  text-align: justify;
+  text-justify: inter-word;
+}
 </style>
 <title>ICYBOB | People | Anne Buckner</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -40,20 +47,10 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2><span>Anne Buckner</h2>
-<head>
-<style>
-img {
-  float: right; padding-left: 500px;
-}
-div {
-  text-align: justify;
-  text-justify: inter-word;
-}
-</style>
-</head>
+
 <body>
 <br>
-<div><img src="../images/ABuckner_ID_Photo.jpg" alt="Anne Buckner" style="width:211px;height:300px;margin-right:15x;">Anne Buckner is a Postdoc on the ICYBOB project, specialising in statistical analysis of Galactic star clusters. Her primary role is to study the behaviour of stars in clusters (spatial distribution, velocities etc.) and follow how these change as the cluster evolves. A key aspect of this research is to investigate how conclusions drawn about these behaviours change due to the conditions a cluster is observed under. She will also study the collective behaviour of clusters on a Galactic scale. Her spatial analyses are performed with <a href="https://github.com/abuckner89/INDICATE"><span style="color:red;"><b>I</b></span><span style="color:orange;"><b>N</b></span><span style="color:#e6e600;"><b>D</b></span><span style="color:#66ff33;"><b>I</b></span><span style="color:#33cc33;"><b>C</b></span><span style="color:#00ccff;"><b>A</b></span><span style="color:#0033cc;"><b>T</b></span><span style="color:#9900ff;"><b>E</b></span></a> - a novel local clustering tool developed by Anne to quantify the degree of association of each point in any 2+D discrete dataset. </div>
+<div><img2 src="../images/ABuckner_ID_Photo.jpg" alt="Anne Buckner" style="width:211px;height:300px;margin-right:15x;">Anne Buckner is a Postdoc on the ICYBOB project, specialising in statistical analysis of Galactic star clusters. Her primary role is to study the behaviour of stars in clusters (spatial distribution, velocities etc.) and follow how these change as the cluster evolves. A key aspect of this research is to investigate how conclusions drawn about these behaviours change due to the conditions a cluster is observed under. She will also study the collective behaviour of clusters on a Galactic scale. Her spatial analyses are performed with <a href="https://github.com/abuckner89/INDICATE"><span style="color:red;"><b>I</b></span><span style="color:orange;"><b>N</b></span><span style="color:#e6e600;"><b>D</b></span><span style="color:#66ff33;"><b>I</b></span><span style="color:#33cc33;"><b>C</b></span><span style="color:#00ccff;"><b>A</b></span><span style="color:#0033cc;"><b>T</b></span><span style="color:#9900ff;"><b>E</b></span></a> - a novel local clustering tool developed by Anne to quantify the degree of association of each point in any 2+D discrete dataset. </div>
 <br>
 <p><a href="https://ui.adsabs.harvard.edu/search/q=author%3ABuckner%2C%20A.S.M&sort=date%20desc%2C%20bibcode%20desc&p_=0"><span style="color:blue;"><b>Publications on ADS</b></span></a></p>
 <p><a href="https://orcid.org/0000-0002-1832-8229"><span style="color:#b3b3b3;"><b>ORC</b></span><span style="color:#85e085;"><b>iD</b></span><span style="color:#b3b3b3;">: <b>0000-0002-1832-8229</b></span></a></p>
