--- a/profiles/liow.html
+++ b/profiles/liow.html
@@ -5,7 +5,7 @@
 h1 {
   position: absolute;
   top: 10px;
-}
+}      
 </style>
 <title>ICYBOB | People | Kong You Liow</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -40,9 +40,15 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2>Kong You Liow</h2>
-            <p>I am a third year PhD student at the University of Exeter. My project is to
+            <style>                    
+            div {
+                text-align: justify;
+                text-justify: inter-word;
+                }    
+            </style>
+            <div>I am a third year PhD student at the University of Exeter. My project is to
             understand the formation of young massive clusters (YMCs) through numerical simulations. Currently,
-            I'm looking at YMCs formation via cloud-cloud collisions.</p>
+            I'm looking at YMCs formation via cloud-cloud collisions.</div>
             <p>More in <a href="https://kyliow.github.io/" target="_blank"> https://kyliow.github.io</a></p>
             <p>Follow me <a href="https://www.twitter.com/astro_kyliow" target="_blank"> @astro_kyliow</a></p>
         </div>
