--- a/profiles/dobbs.html
+++ b/profiles/dobbs.html
@@ -40,7 +40,14 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2>Clare Dobbs</h2>
-<p> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </p>
+            <style>              
+                div {
+                  text-align: justify;
+                  text-justify: inter-word;
+                }    
+            </style>
+
+<div> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </<div>
         </div>
       </div>
       <div class="sidebar">
