--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@ h1 {
   position: absolute;
   top: 10px;
 }
+    
+    f1 {
+  position: absolute;
+  left: 100px;
+}
 </style>
 <title>ICYBOB</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -50,7 +55,7 @@ h1 {
 
           <div>ICYBOB is an ERC funded project investigating the formation and evolution of stellar clusters. The project aims to determine how the initial conditions of star formation, including the formation of molecular clouds, determine the properties of stellar clusters. Below is an example optical post-processed image simulation of a cluster formed by colliding flows, with dust extinction. </div>
           <br>
-          <img src="/images/lowvel_ext_new.png" width="445" height="445" alt="Simulated image of an embedded star cluster" class="center" " title="Simulated image of an embedded star cluster" />
+          <f1><img src="/images/lowvel_ext_new.png" width="445" height="445" alt="Simulated image of an embedded star cluster" class="center" " title="Simulated image of an embedded star cluster" /></f1>
         </div>
       </div>
       <div class="sidebar">
