--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h1 {
       <div class="clr"></div>
       <div class="logo">
         <center> <h1><a href="../index.html"><b><img src="../images/ICYBOB_logov1_white.png" alt="ICYBOB_white" width="250" height="250">
-</b></a><br /> </h1>
+</b></a></h1></center><br />
       </div>
     </div>
   </div>
