--- a/research.html
+++ b/research.html
@@ -55,16 +55,16 @@ h1 {
             <div>The main research at ICYBOB is listed below:</div>
             <dl>
                 <b><dt>Cloud-cloud collisions</dt></b>
-              <div><dd>Young massive clusters (YMCs) are abundant in interacting galaxies such as Antennae galaxies, but less in quiescent galaxies like the Milky Way. One theory is that YMCs are formed through colliding giant molecular clouds, which happen more frequent in highly dynamic environment. These clouds are hundreds of light-years in size and can be as massive as 1,000,000 solar masses, so there is enough gas for star formation when the clouds collide. At ICYBOB, we perform smoothed particle hydrodynamics (SPH) cloud-cloud collision simulations to investigate the optimum initial conditions to form massive clusters.</dd></div>
+              <div>Young massive clusters (YMCs) are abundant in interacting galaxies such as Antennae galaxies, but less in quiescent galaxies like the Milky Way. One theory is that YMCs are formed through colliding giant molecular clouds, which happen more frequent in highly dynamic environment. These clouds are hundreds of light-years in size and can be as massive as 1,000,000 solar masses, so there is enough gas for star formation when the clouds collide. At ICYBOB, we perform smoothed particle hydrodynamics (SPH) cloud-cloud collision simulations to investigate the optimum initial conditions to form massive clusters.</div>
               <br>
-              <dd> <img src="/images/splash_0344.png" width="400" style="float:center " alt="Colliding clouds at 1 Myr"/></dd>
-              <dd> </dd>
-
-              <dt>Stellar feedback</dt>
-              <dd> Some text </dd>
-              <dd> Image tag here </dd>
-              <dd> </dd>
+              <img src="/images/splash_0344.png" width="400"  " alt="Colliding clouds at 1 Myr"/>
               
+
+              <br>
+                <b><dt>Stellar feedback</dt></b>
+              <div> Some text </div>
+                <br>
+              <img src="/images/a_figure.png" width="400"  " alt="Colliding clouds at 1 Myr"/>              
               
               <dt>Properties of Star Clusters</dt>
               <div><dd> Star clusters are the building blocks of our Galaxy, as most stars are formed in clusters. Therefore to better understand the star formation process requires following the evolution of (i) stars in clusters and (ii) clusters collectively on a Galactic scale. At ICYBOB, we study the spatial and kinematic behaviour of clusters as they evolve, identifying changes and comparing differences in their properties at various stages. In addition, we look at how observing conditions impact the conclusions we draw about cluster evolution.  </dd></div>
