--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ h1 {
 <script type="text/javascript" src="cuf_run.js"></script>
 </head>
 <body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class="main">
   <div class="header">
     <div class="header_resize">
