--- a/people.html
+++ b/people.html
@@ -39,26 +39,28 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2>Staff</h2>
+        <h2><span>People</h2>
+
+          <b><dt>Staff</dt></b>
             <ul>
-              <li><a href="/profiles/dobbs.html">Clare Dobbs</a></li>
-              <li><a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li>
+              <dd><li><a href="/profiles/dobbs.html">Clare Dobbs</a></li><\dd>
+              <dd><li><a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li><\dd>
             </ul>
-          <h2>Postdocs</h2>
+          <b><dt>Postdocs</dt></b>
             <ul>
-              <li><a href="/profiles/ali.html">Ahmad Ali</a></li>
-              <li><a href="/profiles/buckner.html">Anne Buckner</a></li>
+              <dd><li><a href="/profiles/ali.html">Ahmad Ali</a></li><\dd>
+              <dd><li><a href="/profiles/buckner.html">Anne Buckner</a></li><\dd>
             </ul>
-          <h2>PhD Student</h2>
+          <b><dt>PhD Students</dt></b>
             <ul>
-              <li> Nicholas Herrington </li>
+              <dd><li> Nicholas Herrington </li><\dd>
             </ul>
-          <h2>Researchers associated with ICYBOB</h2>
+          <b><dt>Researchers associated with ICYBOB</dt></b>
             <ul>
-              <li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
-              <li> <a href="https://stevenrieder.com">Steven Rieder</a> (Postdoc) </li>
-              <li> Tom Bending (PhD student) </li>
-              <li> <a href="/profiles/liow.html">Kong You Liow</a> (PhD student) </li>
+              <dd><li> Svitlana Zhukovska (Ernest Rutherford fellow) </li><\dd>
+              <dd><li> <a href="https://stevenrieder.com">Steven Rieder</a> (Postdoc) </li><\dd>
+              <dd><li> Tom Bending (PhD student) </li><\dd>
+              <dd><li> <a href="/profiles/liow.html">Kong You Liow</a> (PhD student) </li><\dd>
             </ul>
         </div>
       </div>
