--- a/people.html
+++ b/people.html
@@ -40,27 +40,27 @@ h1 {
       <div class="mainbar">
         <div class="article">
         <h2><span>People</h2>
-
+            <br>
           <b><dt>Staff</dt></b>
             <ul>
-              <dd><li><a href="/profiles/dobbs.html">Clare Dobbs</a></li><\dd>
-              <dd><li><a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li><\dd>
+              <dd><li><a href="/profiles/dobbs.html">Clare Dobbs</a></li>
+              <dd><li><a href="http://www.astro.ex.ac.uk/people/timn/">Tim Naylor</a> </li>
             </ul>
           <b><dt>Postdocs</dt></b>
             <ul>
-              <dd><li><a href="/profiles/ali.html">Ahmad Ali</a></li><\dd>
-              <dd><li><a href="/profiles/buckner.html">Anne Buckner</a></li><\dd>
+              <dd><li><a href="/profiles/ali.html">Ahmad Ali</a></li>
+              <dd><li><a href="/profiles/buckner.html">Anne Buckner</a></li>
             </ul>
           <b><dt>PhD Students</dt></b>
             <ul>
-              <dd><li> Nicholas Herrington </li><\dd>
+              <dd><li> Nicholas Herrington </li>
             </ul>
           <b><dt>Researchers associated with ICYBOB</dt></b>
             <ul>
-              <dd><li> Svitlana Zhukovska (Ernest Rutherford fellow) </li><\dd>
-              <dd><li> <a href="https://stevenrieder.com">Steven Rieder</a> (Postdoc) </li><\dd>
-              <dd><li> Tom Bending (PhD student) </li><\dd>
-              <dd><li> <a href="/profiles/liow.html">Kong You Liow</a> (PhD student) </li><\dd>
+              <dd><li> Svitlana Zhukovska (Ernest Rutherford fellow) </li>
+              <dd><li> <a href="https://stevenrieder.com">Steven Rieder</a> (Postdoc) </li>
+              <dd><li> Tom Bending (PhD student) </li>
+              <dd><li> <a href="/profiles/liow.html">Kong You Liow</a> (PhD student) </li>
             </ul>
         </div>
       </div>
