--- a/profiles/dobbs.html
+++ b/profiles/dobbs.html
@@ -5,9 +5,9 @@
 h1 {
   position: absolute;
   top: 75px;
-}
+}      
 </style>
-<title>ICYBOB | People | Clare Dobbs </title>
+<title>ICYBOB | People | Kong You Liow</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="../style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/cufon-yui.js"></script>
@@ -39,15 +39,15 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2>Clare Dobbs</h2>
-            <style>              
-                div {
-                  text-align: justify;
-                  text-justify: inter-word;
+          <h2>Kong You Liow</h2>
+            <style>                    
+            div {
+                text-align: justify;
+                text-justify: inter-word;
                 }    
             </style>
-<div> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </<div>
-        </div>
+            <div> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </<div>
+       </div>
       </div>
       <div class="sidebar">
         <div class="gadget">
