--- a/profiles/dobbs.html
+++ b/profiles/dobbs.html
@@ -7,7 +7,7 @@ h1 {
   top: 75px;
 }      
 </style>
-<title>ICYBOB | People | Kong You Liow</title>
+<title>ICYBOB | People | Clare Dobbs</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="../style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/cufon-yui.js"></script>
@@ -39,7 +39,7 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2>Kong You Liow</h2>
+          <h2>Clare Dobbs</h2>
             <style>                    
             div {
                 text-align: justify;
@@ -47,6 +47,7 @@ h1 {
                 }    
             </style>
             <div> I am a professor in astrophysics at the University of Exeter. I lead the ERC funded program ICYBOB. </<div>
+                <br>
        </div>
       </div>
       <div class="sidebar">
