--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@ h1 {
             </style>
               
               <dl>
-                <b><dt>Cloud-cloud collisions</dt></b>
+                <b><dt>Cloud-Cloud Collisions</dt></b>
               <div>Young massive clusters (YMCs) are abundant in interacting galaxies such as Antennae galaxies, but less in quiescent galaxies like the Milky Way. One theory is that YMCs are formed through colliding giant molecular clouds, which happen more frequent in highly dynamic environment. These clouds are hundreds of light-years in size and can be as massive as 1,000,000 solar masses, so there is enough gas for star formation when the clouds collide. At ICYBOB, we perform smoothed particle hydrodynamics (SPH) cloud-cloud collision simulations to investigate the optimum initial conditions to form massive clusters.</div>
               <br>
               <img src="/images/splash_0344.png" width="400" alt="Colliding clouds at 1 Myr" title="Colliding clouds at 1 Myr"/>
