--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ h1 {
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+
         </ul>
         <div class="clr"></div>
       </div>
@@ -88,6 +90,8 @@ h1 {
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+
       </ul>
       <div class="clr"></div>
     </div>
