--- a/movies.html
+++ b/movies.html
@@ -25,6 +25,8 @@ h1 {
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+
         </ul>
         <div class="clr"></div>
       </div>
@@ -64,6 +66,7 @@ h1 {
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="clr"></div>
     </div>
