--- a/profiles/buckner.html
+++ b/profiles/buckner.html
@@ -26,7 +26,7 @@ h1 {
           <li><a href="../research.html">Research</a></li>
           <li><a href="../publications.html">Publications</a></li>
           <li><a href="../movies.html">Movies</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="../contact.html">Contact Us</a></li>
         </ul>
         <div class="clr"></div>
       </div>
@@ -81,7 +81,7 @@ h1 {
         <li><a href="../research.html">Research</a></li>
         <li><a href="../publications.html">Publications</a></li>
         <li><a href="../movies.html">Movies</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="../contact.html">Contact Us</a></li>
       </ul>
       <div class="clr"></div>
     </div>
