--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,7 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><b>I</b>nitial <b>C</b>onditions for <b>Y</b>MCs and <b>B</b>irth of
-<b>OB</b> associations</h2>
+          <h2>Contact Us</h2>
             <style>
               img {
                     display: block;
