--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@ h1 {
     <div class="header_resize">
       <div class="menu_nav">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="people.html">People</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li class="active"><a href="contact.html">Contact Us</a></li>
 
         </ul>
         <div class="clr"></div>
@@ -83,12 +83,12 @@ h1 {
     <div class="footer_resize">
       <p class="lf">&copy; Copyright MyWebSite. Designed by Blue <a href="http://www.bluewebtemplates.com/">Website Templates</a></p>
       <ul class="fmenu">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="people.html">People</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li class="active"><a href="contact.html">Contact Us</a></li>
 
       </ul>
       <div class="clr"></div>
