--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@ h1 {
           <li><a href="index.html">Home</a></li>
           <li><a href="people.html">People</a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publications</a></li>
+          <li class="active"><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
           <li><a href="contact.html">Contact Us</a></li>
 
@@ -81,7 +81,7 @@ h1 {
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="people.html">People</a></li>
         <li><a href="research.html">Research</a></li>
-        <li><a href="publications.html">Publications</a></li>
+        <li class="active"><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="contact.html">Contact Us</a></li>
 
