--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@ h1 {
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="people.html">People</a></li>
-          <li><a href="research.html">Research</a></li>
+          <li class="active"><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
           <li><a href="contact.html">Contact Us</a></li>
@@ -97,7 +97,7 @@ h1 {
       <ul class="fmenu">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="people.html">People</a></li>
-        <li><a href="research.html">Research</a></li>
+        <li class="active"><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="contact.html">Contact Us</a></li>
