--- a/movies.html
+++ b/movies.html
@@ -24,7 +24,7 @@ h1 {
           <li><a href="people.html">People</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
-          <li><a href="movies.html">Movies</a></li>
+          <li class="active"><a href="movies.html">Movies</a></li>
           <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
@@ -65,7 +65,7 @@ h1 {
         <li><a href="people.html">People</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
-        <li><a href="movies.html">Movies</a></li>
+        <li class="active"><a href="movies.html">Movies</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="clr"></div>
