--- a/profiles/buckner.html
+++ b/profiles/buckner.html
@@ -41,6 +41,7 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
+            <a href="../people.html">People|</a><p> Anne Buckner<\p>
           <h2><span>Anne Buckner</h2>
             <style>              
             img {
