--- a/profiles/buckner.html
+++ b/profiles/buckner.html
@@ -22,7 +22,7 @@ h1 {
       <div class="menu_nav">
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../people.html">People</a></li>
+          <li class="active"><a href="../people.html">People</a></li>
           <li><a href="../research.html">Research</a></li>
           <li><a href="../publications.html">Publications</a></li>
           <li><a href="../movies.html">Movies</a></li>
@@ -41,7 +41,6 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-            <a href="../people.html">People|</a><p> Anne Buckner<\p>
           <h2><span>Anne Buckner</h2>
             <style>              
             img {
@@ -78,7 +77,7 @@ h1 {
       <p class="lf">&copy; Copyright MyWebSite. Designed by Blue <a href="http://www.bluewebtemplates.com/">Website Templates</a></p>
       <ul class="fmenu">
         <li class="active"><a href="../index.html">Home</a></li>
-        <li><a href="../people.html">People</a></li>
+        <li class="active"><a href="../people.html">People</a></li>
         <li><a href="../research.html">Research</a></li>
         <li><a href="../publications.html">Publications</a></li>
         <li><a href="../movies.html">Movies</a></li>
