--- a/movies.html
+++ b/movies.html
@@ -61,7 +61,7 @@ h1 {
     <div class="footer_resize">
       <p class="lf">&copy; Copyright MyWebSite. Designed by Blue <a href="http://www.bluewebtemplates.com/">Website Templates</a></p>
       <ul class="fmenu">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="people.html">People</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
