updated liow and dobbs 2020

--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@ h1 {
         <div class="article">
           <h2><span>Publications</h2>
             <ul>
-              <li> Liow K. Y., Dobbs C. L., 2020, accepted for publication in MNRAS
+              <li> Liow K. Y., Dobbs C. L., 2020, MNRAS, 499, 1099
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200907857L/abstract">‘The role of collision speed, cloud density, and turbulence in the formation of young massive clusters via cloud-cloud collisions’</a> </li>
                 </ul>
