--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@ h1 {
                 </ul>
               </li>
               
-              <li> Campbell-White J., <b>Ali A. A.</b>, Froebrich D., Kume A., 2020, MNRAS, 496, 4311
+              <li> Campbell-White J., Ali A. A., Froebrich D., Kume A., 2020, MNRAS, 496, 4311
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.496.4311C/abstract">‘Shape analysis of H II regions - II. Synthetic observations’</a> </li>
                 </ul>
