updates to publications/profile

--- a/profiles/ali.html
+++ b/profiles/ali.html
@@ -51,7 +51,7 @@ h1 {
 <br>
 <div>I use numerical simulations to investigate these processes, mostly with TORUS (Monte Carlo radiative transfer and grid-based hydrodynamics). TORUS calculates photoionization, thermal, and radiative equilibria using multiple atomic species and dust grains (including scattering/absorption). It also calculates synthetic observations of line and continuum emission from gas and dust directly from the radiation-hydrodynamics models (i.e. without post-processing). I also use sphNG (smoothed particle hydrodynamics) for stellar winds and larger scale initial conditions.</div>
 <br>
-<p><a href="https://ui.adsabs.harvard.edu/public-libraries/hjrienvYQauME1IBxDtjrA">View my publications on ADS</a></p>
+<p><a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0001-5189-4022&sort=date+desc">View my publications on ADS</a></p>
 
         </div>
       </div>
