--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,12 @@ h1 {
         <div class="article">
           <h2><span>Publications</h2>
             <ul>
+              <li> Ali, A. A., 2021, MNRAS, 501, 4136
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501.4136A/abstract">‘The growth of H II regions around massive stars: the role of metallicity and dust’</a> </li>
+                </ul>
+              </li>
+
               <li> Liow K. Y., Dobbs C. L., 2020, MNRAS, 499, 1099
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200907857L/abstract">‘The role of collision speed, cloud density, and turbulence in the formation of young massive clusters via cloud-cloud collisions’</a> </li>
