--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@ h1 {
         <div class="article">
           <h2><span>Publications</h2>
             <ul>
-              <li> Ali, A. A., 2021, MNRAS, 501, 4136
+              <li> Ali A. A., 2021, MNRAS, 501, 4136
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501.4136A/abstract">‘The growth of H II regions around massive stars: the role of metallicity and dust’</a> </li>
                 </ul>
